<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="59dp"
                android:text="Documento"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtdoc"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="30dp"
                android:text="Nombre"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt1" />

            <EditText
                android:id="@+id/txtname"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                android:ems="10"
                android:hint="@string/txtnombre"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt2" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="30dp"
                android:text="Estrato"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtname" />

            <Spinner
                android:id="@+id/spnstr"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt3" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="30dp"
                android:text="Salario"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnstr" />

            <EditText
                android:id="@+id/tstsalary"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                android:ems="10"
                android:hint="@string/txtsalario"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt4" />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="30dp"
                android:text="Nivel educativo"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tstsalary" />

            <Spinner
                android:id="@+id/spnedu"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt5" />

            <Button
                android:id="@+id/btnupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="40dp"
                android:text="@string/texto_actualizar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnedu" />

            <Button
                android:id="@+id/btncancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                android:text="@string/texto_eliminar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnedu" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>